submit exercise 03 (#4)
* submit exercise 03

* test ci

* test ci

* test ci

* test CI

* update file ci-native

* update file dockerFile

* update file dockerFile
