# docs/swagger.yaml
@@ -1,4 +1,14 @@
 basePath: /
+definitions:
+  dto.ShortenReq:
+    properties:
+      exp:
+        type: integer
+      url:
+        type: string
+    required:
+    - url
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -18,10 +28,57 @@ paths:
       summary: HealthCheck
       tags:
       - healthCheck
+  /v1/links/redirect/{code}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the original URL from the short code and redirect the
+        client to it
+      parameters:
+      - description: Short URL Code
+        in: path
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "307":
+          description: Redirect to original URL
+          schema:
+            type: string
+        "400":
+          description: code is required
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: url not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Redirect to original URL
+      tags:
+      - Redirect
   /v1/links/shorten:
     post:
       description: Accepts a long URL and an expiration time, then generates a shortened
         key.
+      parameters:
+      - description: URL to be shortened and expiration time
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ShortenReq'
       responses:
         "200":
           description: Success
